# ai-data-scientist

./: .env.example  README.md  app.py  ingest_data.py  main.py  pyproject.toml  train.py
agents/: coder.py  data_analyst.py  llm.py  slides_generator.py  supervisor.py  train_vanna.py
agents/llm/: azure_openai.py  deepseek.py  llm.py  mistral.py
static/: table.csv  table.tsv
static/code_example/: slides_generator_code.py
